# docs/swagger.json
@@ -30,12 +30,12 @@
                 "summary": "Performs user login",
                 "parameters": [
                     {
-                        "description": "User login credentials",
-                        "name": "user",
+                        "description": "query params",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/models.UserLogin"
                         }
                     }
                 ],
@@ -43,19 +43,7 @@
                     "202": {
                         "description": "Successful login",
                         "schema": {
-                            "$ref": "#/definitions/models.Login"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.LoginResponse"
                         }
                     }
                 }
@@ -63,10 +51,21 @@
         }
     },
     "definitions": {
-        "models.Login": {
+        "models.LoginResponse": {
             "type": "object",
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserLogin": {
+            "type": "object",
+            "properties": {
+                "Email": {
+                    "type": "string"
+                },
+                "Password": {
                     "type": "string"
                 }
             }
